[gd_scene load_steps=6 format=3 uid="uid://ckjydks0hwd44"]

[ext_resource type="Script" uid="uid://d0vo4slcy405b" path="res://scripts/classes/temp_player.gd" id="1_ldeu4"]
[ext_resource type="Resource" uid="uid://bo8bx3w6w6s7j" path="res://resources/player.tres" id="2_kc87p"]
[ext_resource type="Texture2D" uid="uid://dkbj3xfjglp5f" path="res://icon.svg" id="2_pw6if"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yautc"]
size = Vector2(126, 127)

[sub_resource type="CircleShape2D" id="CircleShape2D_pw6if"]
radius = 90.0

[node name="TempPlayer" type="CharacterBody2D" node_paths=PackedStringArray("jump_buffer", "coyote_time") groups=["Player"]]
script = ExtResource("1_ldeu4")
buff = ExtResource("2_kc87p")
base_jump = 900.0
jump_buffer = NodePath("JumpBuffer")
coyote_time = NodePath("CoyoteTimer")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -64)
texture = ExtResource("2_pw6if")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -63.5)
shape = SubResource("RectangleShape2D_yautc")

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -64)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pw6if")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
